Added Table &  Table Range

--- a/src/app/ticket-data-table/ticket-data-table.component.html
+++ b/src/app/ticket-data-table/ticket-data-table.component.html
@@ -10,40 +10,38 @@
         <input type="date" [(ngModel)]="filterDate.to">
     </div>
     <span (click)="toggleTable()" class="dialog-close-button"></span>
-    <button type="button" class="button cycle-button" (click)="filterByDate()"  name="button"><span class="mif-search"></span></button>
+    <button type="button" class="button cycle-button" (click)="filterByDate()"  name="button"><i class="fa fa-search"></i></button>
 </div>
 
 <div *ngIf="appService._dataTableViews.TABLE">
+ <app-master-loading [regularLoading]="true" *ngIf="isLoading"></app-master-loading>
+ <label style="color: white;font-size:x-large;">Total: {{dataTable.length}}</label>
 <div  class="dataTables_filter"><label>Filter Table:<input [(ngModel)]="searchTable" type="search" ></label></div>
 <table class="dataTable striped border bordered"  style="display: table;" >
 <thead>
 <tr role="row">
-  <th  rowspan="1" colspan="1"  style="width: 0px;">View</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ticket #</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Created By</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst Fl Name</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst FName</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst LName</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Land Line</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt Tel</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt 2 Tel</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt 3 Tel</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt 4 Tel</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ow Fl Name</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ow FName</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ow LName</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Sub</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Blck #</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Lt #</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Tax Account</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Property Id</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Full Address</th>
-  <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">MSAG Comm</th>
+        <!-- <th></th> -->
+        <th  rowspan="1" colspan="1"  style="width: 0px;">View</th>
+        <!-- <th class="sorting">Status</th> -->
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Ticket #</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Created By</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst Fl Name</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst FName</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Cst LName</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Land Line</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Alt Tel</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Sub</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Blck #</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Lt #</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Tax Account</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Property Id</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">Full Address</th>
+        <th class="sorting" rowspan="1" colspan="1"  style="width: 0px;">MSAG Comm</th>
 </tr>
 </thead><tbody>
-<!-- <tr role="row" *ngFor="let data of dataTable | dataTable:searchTable; let index =index;let isOdd=even;let isEven=odd" [class.odd]="isOdd" [class.even]="isEven">
-  <td class="sorting_1">
-     <a routerLink="/home/ticketView/{{data.id_ticket}}">Open</a>
+<tr role="row" *ngFor="let row of dataTable | datatable:searchTable; let index =index;let isOdd=even;let isEven=odd" [class.odd]="isOdd" [class.even]="isEven">
+  <!-- <td class="sorting_1">
+     <a routerLink="/home/ticketView/{{data.id_ticket}}">Open Ticket</a>
   </td>
   <td>{{data.objectid}}</td>
   <td>{{data.user}}</td>
@@ -64,8 +62,30 @@
   <td>{{data.tax_account_num}}</td>
   <td>{{data.property_id}}</td>
   <td>{{data.full_address}}</td>
-  <td>{{data.msag_comm}}</td>
-</tr> -->
+  <td>{{data.msag_comm}}</td> -->
+  <!-- <td>
+        <button class="button rounded" (click)="openComments(row)">
+          <i class="fa fa-comments"></i></button>
+      </td> -->
+      <td class="sorting_1">
+        <a routerLink="/ticket/view/{{row.id_ticket}}">Open Ticket</a>
+      </td>
+      <!-- <td>{{row.sentto}}</td> -->
+      <td>{{ (row.objectid) ? row.objectid : 'OLD TICKET'}}</td>
+      <td>{{row.user}}</td>
+      <td>{{row.cfull_name}}</td>
+      <td>{{row.cfirst_name}}</td>
+      <td>{{row.clast_name}}</td>
+      <td>{{row.telephone_land_line}}</td>
+      <td>{{row.alt_telephone}}</td>
+      <td>{{row.subdivision}}</td>
+      <td>{{row.block_num}}</td>
+      <td>{{row.lot_num}}</td>
+      <td>{{row.tax_account_num}}</td>
+      <td>{{row.property_id}}</td>
+      <td>{{row.full_address}}</td>
+      <td>{{row.msag_comm}}</td>
+</tr>
 </tbody>
 </table>
 </div>
