Finish filter section

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -185,7 +185,7 @@
                                         <i class="fa fa-download" aria-hidden="true"></i>
                                         Download 1000+
                                     </button>
-                                    <button ng-click="dataTableActions('reset')" class="fluent-button">
+                                    <button (click)="resetTable()" class="fluent-button">
                                       <!--<span class="mif-filter"></span>-->
                                       <img src="assets/filter.png" alt="Filter">
                                         Reset
