added configuration to spartan for ticket whats available to users.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-toolbar *ngIf="toolBarOnOff"></app-toolbar>   
+<app-master-loading *ngIf="isLoading" [regularLoading]="true" [title]="msg"></app-master-loading> 
+<app-toolbar *ngIf="toolBarOnOff"></app-toolbar>  
 <router-outlet></router-outlet>
