--- a/src/app/master-loading/master-loading.component.html
+++ b/src/app/master-loading/master-loading.component.html
@@ -1,4 +1,4 @@
 <div id="con" *ngIf="regularLoading">
     <div data-role="preloader" data-type="square" data-style="color"></div>
-    <label for="">Please Wait...</label>
+    <label for="">{{title}}</label>
 </div>
