update on login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="bgbody">
-  <div class="login-form padding20 block-shadow" style="opacity: 1; transform: scale(1); transition: 0.5s;">
+  <div *ngIf="display" class="login-form padding20 block-shadow" style="opacity: 1; transform: scale(1); transition: 0.5s;">
       
      
           <div style="position: absolute;top: 1.8px; z-index: 1000">
