Fix file upload to display file attach

--- a/src/app/ticket-workflow/ticket-workflow.component.html
+++ b/src/app/ticket-workflow/ticket-workflow.component.html
@@ -15,7 +15,9 @@
                       <span class="check"></span>
                   </label>
               </td>
-              <td> <img [src]="profileImage" width="100" height="100" alt=""></td>
+              <td> 
+                <img [src]="profileImage" width="100" height="100" alt="">
+              </td>
               <td><h2 >{{staff.name}}</h2>       </td>
             </tr>
             <tr>
