--- a/src/app/nrf/assign/assign.component.html
+++ b/src/app/nrf/assign/assign.component.html
@@ -1,15 +1,42 @@
-<table>
-  <thead>
-    <tr>
-      <th>full tn</th>
-      <th>bid date</th>
-      <th>psap name</th>
-    </tr>
-    
-  </thead>
-  <tbody>
-    <tr>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
+<app-form></app-form>
+<div class="window">
+  <div class="window-caption">
+      <span class="window-caption-icon"><span class="mif-windows"></span></span>
+      <span class="window-caption-title">All NRFs - {{nrfs.length}}</span>
+      <span class="btn-min"></span>
+      <span class="btn-max"></span>
+      <span class="btn-close"></span>
+  </div>
+  <div class="window-content" style="height: 400px">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>full tn</th>
+          <th>bid date</th>
+          <th>HOST name</th>
+          <th>PSAP Name</th>
+          <th>Assignee</th>
+        </tr>
+        
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of nrfs">
+          <td>{{item.full_tn}}</td>
+          <td>{{item.bid_date}}</td>
+          <td>{{item.psap}}</td>
+          <td>{{item.psap_name}}</td>
+          <td>
+              <div class="input-control text full-size">
+                  <select [(ngModel)]="item.assignee" (change)="onChangeAssignee(item)" >
+                      <option *ngFor="let usr of users" value="{{usr.user_id}}">{{usr.first_name + " " + usr.last_name}}</option>
+                  </select>
+                  <button (click)="item.assignee = -1;"  class="button"><i class="fa fa-undo" aria-hidden="true"></i>
+                  </button>
+              </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
