added a lot of updates to nrf

--- a/src/app/nrf/assign/assign.component.html
+++ b/src/app/nrf/assign/assign.component.html
@@ -10,8 +10,8 @@
     <table class="table">
       <thead>
         <tr>
-          <th>full tn</th>
-          <th>bid date</th>
+          <th>Full tn</th>
+          <th>Bid date</th>
           <th>HOST name</th>
           <th>PSAP Name</th>
           <th>Assignee</th>
