--- a/src/app/nrf/form/form.component.html
+++ b/src/app/nrf/form/form.component.html
@@ -2,9 +2,8 @@
   <div class="window-caption">
       <span class="window-caption-icon"><span class="mif-windows"></span></span>
       <span class="window-caption-title">NRF Form - {{name}}</span>
-      <span class="btn-min"></span>
-      <span class="btn-max"></span>
-      <span class="btn-close"></span>
+      
+      <span class="btn-close" (click)="onClose()"></span>
   </div>
   <div class="window-content" style="height: 400px">
       <div class="tabcontrol" data-role="tabcontrol">
@@ -14,42 +13,50 @@
           </ul>
           <div class="frames">
               <div class="frame ribbed-white" id="info">
-                  <form >
+                  
                       <label >PSAP Name</label>
                     <div class="input-control text full-size">
                       
-                      <input type="text">
+                      <input [(ngModel)]="attributes.psap_name" disabled type="text">
                     </div>
                     <label >Host PSAP Name</label>
                     <div class="input-control password full-size">
                       
-                      <input type="text">
+                      <input [(ngModel)]="attributes.psap" disabled type="text">
                     </div>
                     <label >Date</label>
                     <div class="input-control text full-size">
-                      <input type="text" >
+                      <input [(ngModel)]="attributes.bid_date" type="text" disabled >
                     </div>
                     <label >Time</label>
                     <div class="input-control text full-size">
-                      <input type="text" >
+                      <input [(ngModel)]="attributes.bid_time" type="text" disabled >
                     </div>
                     <label >Call One</label>
                     <div class="input-control text full-size">
-                      <input type="text" >
+                      <input (click)="timeStampCall(1)" [(ngModel)]="attributes.call_one" type="text" >
                     </div>
                     <label >Call Two</label>
                     <div class="input-control text full-size">
-                      <input type="text" >
+                      <input (click)="timeStampCall(2)" [(ngModel)]="attributes.call_two" type="text" >
                     </div>
                     <label >Call Three</label>
                     <div class="input-control text full-size">
-                      <input type="text" >
+                      <input (click)="timeStampCall(3)" [(ngModel)]="attributes.call_three" type="text" >
                     </div>
-                  </form>
+                    <label >STATUS</label>
+                    <div class="input-control select">
+                      
+                        <select [(ngModel)]="attributes.status">
+                            <option>OPEN</option>
+                            <option>CLOSED</option>
+                        </select>
+                    </div>
+                 
               </div>
               <div class="frame ribbed-white" id="notes">
                  <div id="chat" >
-                    <div id="body" style="height: 300px;">
+                    <div id="body" style="height: 220px;">
                       <ul>
                         <li></li>
                       </ul>
