finish the NRF features component to spartan pro

--- a/src/app/nrf/assign/assign.component.html
+++ b/src/app/nrf/assign/assign.component.html
@@ -2,15 +2,12 @@
   <div class="window-caption">
       <span class="window-caption-icon"><span class="mif-windows"></span></span>
       <span class="window-caption-title">All NRFs - {{nrfs.length}}</span>
-      <span class="btn-min"></span>
-      <span class="btn-max"></span>
-      <span class="btn-close"></span>
   </div>
   <div class="window-content" style="height: 400px">
     <table class="table">
       <thead>
         <tr>
-          <th>Full tn</th>
+          <th>Full TN</th>
           <th>Bid date</th>
           <th>HOST name</th>
           <th>PSAP Name</th>
