--- a/src/app/nrf/upload/upload.component.html
+++ b/src/app/nrf/upload/upload.component.html
@@ -3,7 +3,7 @@
     <span class="window-caption-icon"><i class="fa fa-paperclip" aria-hidden="true"></i></span>
     <span class="window-caption-title">File Upload</span>
     <span class="pull-right">
-        <button [routerLink]="['/nrf/dashboard']" class="button btnSize">
+        <button [routerLink]="['/nrf/assign']" class="button btnSize">
             <i class="fa fa-window-close" aria-hidden="true"></i>
         </button>
       </span>
