export into excel nrf

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -241,17 +241,23 @@
                                     <div class="tab-content-segment">
                                             <a  [routerLink]="['nrf/upload']" class="fluent-big-button">
                                            
-                                                <i class="fa fa-table fa-6" aria-hidden="true"></i>
-                                                SpreadSheet
+                                                <i class="fa fa-upload"></i>
+                                                Upload
                                             </a>
                                     </div>
                                     <div class="tab-content-segment">
                                                 <a  [routerLink]="['nrf/assign']" class="fluent-big-button">
                                    
-                                                    <i class="fa fa-table fa-6" aria-hidden="true"></i>
+                                                    <i class="fa fa-users"></i>
                                                     Users
                                                 </a>
                                         </div>
+                                    <div class="tab-content-segment">
+                                        <a  [routerLink]="['nrf/export']" class="fluent-big-button">
+                                            <i class="fa fa-download"></i>
+                                            Export
+                                        </a>
+                                    </div>
                             <div class="tab-group-caption">Management</div>
                         </div>
                       </div>
