--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -196,7 +196,7 @@
                           </div>
                       </div>
   
-                      <div *ngIf="_toolSettings.SECTIONS.SUBDIVISION.VIEW.onoff" class="tab-panel" id="tab_subdivision" style="display: none;">
+                      <div *ngIf="_toolSettings.SECTIONS.SUBDIVISION.VIEW.onoff" class="tab-panel" id="tab_subdivision" >
                           <div class="tab-panel-group">
                               <div class="tab-group-content">
                                   <button class="fluent-big-button">
