--- a/src/app/ticket/ticket.component.html
+++ b/src/app/ticket/ticket.component.html
@@ -1,10 +1,11 @@
 <div id="confirm" class="window warning" style="position: absolute;z-index:3;display:none;left: 50%;margin-left: -150px; width:300px; height:200px;">
     <div class="window-caption">
        <span class="window-caption-icon"><span class="mif-cabinet"></span></span>
-       <span class="window-caption-title">Are you sure?</span>
+       <span class="window-caption-title">{{confirmationName}}</span>
        <span (click)="closeConfirmation()" class="mif-cross place-right" style="cursor: pointer"></span>
     </div>
     <div class="window-content">
+        <h2>Are you sure?</h2>
       <br>
       <br>
        <div class="margin10" style="margin-left: 60px;">
