update worksheet subdivsion

--- a/src/app/subdivision/worksheet/worksheet.component.html
+++ b/src/app/subdivision/worksheet/worksheet.component.html
@@ -1,3 +1,16 @@
-<p>
-  worksheet works!
-</p>
+<div class="tabcontrol"  data-role="tabcontrol">
+    <ul class="tabs">
+        <li><a href="#worksheet">WORKSHEET</a></li>
+        <li><a href="#lvsheet">LOCATION VALIDATION PROCESS</a></li>
+        <li><a href="#dbsheet">DATABASE VALIDATION PROCESS</a></li>
+        <li><a href="#gissheet">GIS VALIDATION PROCESS</a></li>
+        <li><a href="#feed">COMMENTS FEED</a></li>
+    </ul>
+    <div class="frames">
+        <div class="frame" id="worksheet">SHEET</div>
+        <div class="frame" id="lvsheet">LV</div>
+        <div class="frame" id="dbsheet">DB</div>
+        <div class="frame" id="gissheet">GIS</div>
+        <div class="frame" id="feed">FEED</div>
+    </div>
+</div>
